--- a/public/css/watchvideo.css
+++ b/public/css/watchvideo.css
@@ -1,5 +1,6 @@
 .container-watch {
   display: flex;
+  flex-wrap: wrap;
 }
 .flex {
   display: flex;
@@ -71,19 +72,50 @@
 }
 @media screen and (max-width: 810px) {
   div.video {
-    margin-left: calc(85% - 42rem);
+    margin-left: calc(88% - 42rem);
   }
   .sidebar-videos {
-    position: absolute;
+    width: 50rem;
   }
-  .nav-content {
-    top: 0;
-    right: 0;
+
+  div.navcontent {
+    overflow: auto;
+    margin-left: 1rem;
   }
   .home-section {
     background: red;
   }
+  .video {
+    margin-top: 4rem;
+  }
+  .sidebar-videos.close ~ .home-section {
+    position: fixed;
+    left: 48rem;
+  }
+}
+.publication {
+  background: #d1d1d1;
+  border-radius: 5px;
+  padding: 1rem;
+}
+.comentaries {
+  width: 100%;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 2rem;
 }
 .video-info {
   text-align: justify;
+}
+.allcomments {
+  flex-direction: column;
+  gap: 1rem;
+}
+.comment-user {
+  border: solid;
+  border-radius: 5px;
+  box-shadow: 6px 6px 1px 0.5px rgba(0, 0, 255, 0.2);
+  padding: 1rem;
+  flex-direction: column;
+  gap: 0.5rem;
 }
