verificacion de si esta logeado o no

--- a/views/acercaDNosotros.ejs
+++ b/views/acercaDNosotros.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:'/css/acerNosotros.css',title:'Acerca de Nosotros'}) %>
+<%- include("templates/head",{ruta:'/css/acerNosotros.css',title:'Acerca de Nosotros',loggin:login}) %>
 
 <!--Contenido-->
 <title>Acerca de Nosotros</title>
