--- a/views/ejemplos.ejs
+++ b/views/ejemplos.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:'/css/ejemplos.css',title:'Ejemplos'}) %>
+<%- include("templates/head",{ruta:'/css/ejemplos.css',title:'Ejemplos',loggin:login}) %>
 
 <% for(let i=0;i<data.length;i++){%>
 <div class="contenedor">   
