--- a/views/foro.ejs
+++ b/views/foro.ejs
@@ -1,5 +1,5 @@
 <!--Formulario de llenado-->
-<%- include("templates/head",{ruta:'/css/foro.css',title:'Foro phpfordevs'}) %>
+<%- include("templates/head",{ruta:'/css/foro.css',title:'Foro phpfordevs',login:login}) %>
 
     <!--Captura los valores por medio de una lista ordenada-->
     <div class="mainforum">
