--- a/views/termycondi.ejs
+++ b/views/termycondi.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:'/css/termycond.css',title:'Terminos y Condiciones phpfordevs'}) %>
+<%- include("templates/head",{ruta:'/css/termycond.css',title:'Terminos y Condiciones phpfordevs',login:login}) %>
 
     <!--Contenido-->
 <div class="contenedor">
