--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:'/css/foro.css',title:'Titulo Foro'}) %>
+<%- include("templates/head",{ruta:'/css/foro.css',title:'Titulo Foro',login:login}) %>
 
     <div class="top-bar">
         <h1><%=foro[0].titforo%></h1>
