--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:"/css/videos.css",title:'randomTitle'}) %>
+<%- include("templates/head",{ruta:"/css/videos.css",title:curso[0].titulo_curso,login:login}) %>
     <div class="container-curso">
         <div class="infocurso">
             <h1>
