--- a/views/cuestionarioBasico.ejs
+++ b/views/cuestionarioBasico.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:'/css/cuestionario.css',title:'Cuestionario Basico de PHP'}) %>
+<%- include("templates/head",{ruta:'/css/cuestionario.css',title:'Cuestionario Basico de PHP',login:login}) %>
 <%- include("templates/cuestionario") %>
 <script src="js/preguntasBasico.js"></script>
 <script src="js/cuestionarioBasico.js"></script>
