--- a/views/cuestionarioIntermedio.ejs
+++ b/views/cuestionarioIntermedio.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:'/css/cuestionario.css',title:'Cuestionario Intermedio de PHP'}) %>
+<%- include("templates/head",{ruta:'/css/cuestionario.css',title:'Cuestionario Intermedio de PHP',login:login}) %>
 <%- include("templates/cuestionario") %>
 <script src="js/preguntasIntermedio.js"></script>
 <script src="js/cuestionarioIntermedio.js"></script>
