--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -1,40 +1,49 @@
 <%- include("templates/head",{ruta:"/css/cursos.css",title:'Cursos de php'}) %>
-<div class="contenedor">
-    <% for(let j=0; j<data.length;j++){ %>
-        <a href="#">
-            <section class="cSection">
-                <table>
-                    <tbody>
-                        <tr>
-                            <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></td>
-                            <td colspan="3" class="titulo"><%=data[j].titulo_curso;%></td>
-                        </tr>
-                        <tr>
-                            <td colspan="3">
-                                <div class="contenido">Contenido:</div>
-                                <%var dato=""%>
-                                <% for(let i=0; i<data[j].contenido.length;i++){ %>
-                                    <% if(data[j].contenido[i]=="."){ %>
-                                        <%dato=dato + data[j].contenido[i];%>
-                                        <div class="pContenido"><p class="iconoDiv">·</p><%=dato;%></div>
-                                        <%dato="";%>
-                                        <%i++%>
-                                    <%}else{%>
-                                        <%dato=dato + data[j].contenido[i];%>   
-                                    <%}%> 
-                                <%}%>   
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="cantTiempo">
-                                    <label id="cantP1"><%=data[j].tiempo;%></label>
-                            </td>
-                            <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
-        </a>
-    <%}%>    
-</div>
-<%- include("templates/footer") %>
+    <div class="contenedor">
+        <% for(let j=0; j<data.length;j++){ %>
+            <%console.log(data)%>
+                <a href="/cursos/<%=data[j].id_curso%>/videos">
+                    <section class="cSection">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></td>
+                                    <td colspan="3" class="titulo">
+                                        <%=data[j].titulo_curso;%>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="3">
+                                        <div class="contenido">Contenido:</div>
+                                        <%var dato="" %>
+                                            <% for(let i=0; i<data[j].contenido.length;i++){ %>
+                                                <% if(data[j].contenido[i]=="." ){ %>
+                                                    <%dato=dato + data[j].contenido[i];%>
+                                                        <div class="pContenido">
+                                                            <p class="iconoDiv">·</p>
+                                                            <%=dato;%>
+                                                        </div>
+                                                        <%dato="";%>
+                                                            <%i++%>
+                                                                <%}else{%>
+                                                                    <%dato=dato + data[j].contenido[i];%>
+                                                                        <%}%>
+                                                                            <%}%>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="cantTiempo">
+                                        <label id="cantP1">
+                                            <%=data[j].tiempo;%>
+                                        </label>
+                                    </td>
+                                    <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                </a>
+                <%}%>
+    </div>
+    <%- include("templates/footer") %>
